# money-models-advisor

./: .gitignore  ADVISOR_OPERATING_GUIDE.md  ADVISOR_QUERY_POLICY_V1.md  ADVISOR_RETRIEVAL_HANDOFF.md  AGENTS.md  AGENT_CLI_BOUNDARY_REFACTOR_PLAN.md  ARCHITECTURE.md  BUSINESS_SNAPSHOT_V1.md  CLI_DESIGN.md  DESIGN.md  GLOSSARY.md  GOLDEN_DATASET.md  IMPLEMENTATION_PLAN.md  JD_REQUIREMENTS_AUDIT.md  JOB_DESCRIPTION.md  README.md  SEARCH_QUERY_QUALITY_PROGRESS.md  SOURCE_NEED_GENERATION_PROGRESS.md  TOOLING_SHORTLIST.md  TOOL_USE_EVAL_IMPLEMENTATION_PLAN.md  TOOL_USE_JUDGMENT_PROGRESS.md  narrative.html  narrative_v1_backup.html  pyproject.toml
corpus/: README.md  money-models-frameworks.md
evals/: advisor_calculation_trace_cases.jsonl  advisor_product_smoke_scenarios.jsonl  advisor_query_variants_v2.jsonl  advisor_search_query_cases.jsonl  advisor_source_event_cases.jsonl  advisor_source_need_cases.jsonl  advisor_tool_use_cases.jsonl  chunk_relevance_pool.diagnostic_embedding_expansion.jsonl  chunk_relevance_pool.gpt-5.5-subagents.jsonl  chunk_relevance_subagent_gpt-5.5_labels.jsonl  golden.jsonl  obligations.jsonl  realistic_queries.jsonl
scripts/: audit_query_realism.py  build_chunk_relevance_pool.py  capture_source_event_trace.py  capture_source_need_trace.py  capture_tool_use_trace.py  compare_chunking.py  compare_retrieval_backends.py  eval_calculation_trace_events.py  eval_model_routing.py  eval_retrieval.py  eval_search_query_quality.py  eval_smoke.py  eval_source_event_traces.py  eval_source_need_generation.py  eval_tool_use_judgment.py  review_obligations.py  (+4 more)
(+687 files in other folders)
