[project]
name = "money-model-architect"
version = "0.1.0"
description = "Local proof harness for a Money Models RAG and diagnostic advisor."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mma = "money_model_architect.cli:main"
money-model-advisor = "money_model_architect.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
